[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/Props/Breakable_Wall2/Breakable_Wall2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sound_Effects/Bricks/232396__cejordi84__bricks.wav" type="AudioStream" id=2]

[node name="Breakable_Wall2" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Hit_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -25.0

[node name="Shake_Duration" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="Shake_Proc" type="Timer" parent="."]
process_mode = 0
wait_time = 0.02
[connection signal="timeout" from="Shake_Duration" to="." method="_on_Shake_Duration_timeout"]
[connection signal="timeout" from="Shake_Proc" to="." method="_on_Shake_Proc_timeout"]
